bundle for tkgs+ms_dns

--- a/values-example.yaml
+++ b/values-example.yaml
@@ -23,9 +23,20 @@ aws:
 gcloud:
   project_name: exampleproject
   zone_name: example.com
+
+rfc2136:
+  host: activedirectory.vmw.local
+  port: 53
+  zone: example.com #must be root domain
+  insecure: true # true,false
+  secret: Zey0ypFf09Ov3kGHP+UjP2ueVo5JPlZ/gX3GRvFfokI= # no need to set this, if it's insecure #sudo docker run cmd.cat/tsig-keygen tsig-keygen
+  secret_alg: hmac-sha256 # no need to set this, if it's insecure
+  keyname: tsig-key # no need to set this, if it's insecure
+  domain_user: gorkem #username for a domain user which can issue certs
+  domain_user_pass: samplepassword #password for domain user
 provider-config:
-  dns: gcloud-dns     # or aws
-  k8s: gke            # or tkg
+  dns: rfc2136     # or gcloud-dns,aws,rfc2136
+  k8s: tkgs            # or gke,tkgs,tkgm
 tap:
   version: 1
   okta:
