fix issues with ad certs

--- a/config/ad/cert-ingress/cert/cert-secret.yaml
+++ b/config/ad/cert-ingress/cert/cert-secret.yaml
@@ -1,3 +1,5 @@
+#@ load("@ytt:data", "data")
+---
 apiVersion: v1
 kind: Secret
 metadata:
@@ -21,7 +23,7 @@ type: kubernetes.io/tls
 apiVersion: v1
 kind: Secret
 metadata:
-  name: #@ "cnr-{}".format(data.values.ingress.contour_tls_secret)
+  name: #@ "cnrs-{}".format(data.values.ingress.contour_tls_secret)
   namespace: learningcenter
 data:
   tls.crt: change-me-secret-crt3
