--- a/tap-values.yaml
+++ b/tap-values.yaml
@@ -8,7 +8,7 @@ buildservice:
   kp_default_repository_password: #@ data.values.container_registry.password
   tanzunet_username: #@ data.values.tanzunet.username
   tanzunet_password: #@ data.values.tanzunet.password
-  enable_automatic_dependency_updates: true
+  enable_automatic_dependency_updates: false
   descriptor_name: full
 
 supply_chain: testing_scanning
@@ -70,7 +70,7 @@ contour:
       type: LoadBalancer
 
 accelerator: 
-  domain: #@ "accelerator.{}".format(data.values.ingress.domain)                         
+  domain: #@ "{}".format(data.values.ingress.domain)                         
   ingress:
     include: true
   tls:
@@ -82,7 +82,7 @@ accelerator:
 cnrs:
   domain_name: #@ "cnr.{}".format(data.values.ingress.domain)
   domain_template: "{{.Name}}-{{.Namespace}}.{{.Domain}}"
-  default_tls_secret: #@ "{}/{}".format(data.values.ingress.contour_tls_namespace,data.values.ingress.contour_tls_secret)
+  default_tls_secret: #@ "{}/cnrs-{}".format(data.values.ingress.contour_tls_namespace,data.values.ingress.contour_tls_secret)
 
 grype:
   namespace: #@ data.values.developer_namespace
