--- a/config/ad/cert-ingress/cert/cert-secret.yaml
+++ b/config/ad/cert-ingress/cert/cert-secret.yaml
@@ -24,7 +24,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: #@ "cnrs-{}".format(data.values.ingress.contour_tls_secret)
-  namespace: learningcenter
+  namespace: #@ data.values.ingress.contour_tls_namespace
 data:
   tls.crt: change-me-secret-crt3
   tls.key: change-me-secret-key3
