--- a/tas-adapter/additonal-ingress-config/cert-manager/tls-cert-delegation.yaml
+++ b/tas-adapter/additonal-ingress-config/cert-manager/tls-cert-delegation.yaml
@@ -10,7 +10,7 @@ spec:
     - secretName: #@ data.values.ingress.contour_tls_secret
       targetNamespaces:
         - "*"
-    - secretName: #@ "cnr-{}".format(data.values.ingress.contour_tls_secret)
+    - secretName: #@ "cnrs-{}".format(data.values.ingress.contour_tls_secret)
       targetNamespaces:
         - "*"
     - secretName: #@ "learning-center-{}".format(data.values.ingress.contour_tls_secret)
