--- a/tas-adapter/overlays/tas-adapter/configuration-overlay.yaml
+++ b/tas-adapter/overlays/tas-adapter/configuration-overlay.yaml
@@ -3,12 +3,8 @@
 #@ load("@ytt:data", "data")
 
 #@ def updates():
-cfk8s_controller_namespace: INGRESS_TLS_SECRET_NAMESPACE
-workloads_tls_secret_name: tas-adapter-INGRESS_TLS_SECRET_NAME
-#@overlay/match when=1
-cfProcessDefaults:
-  #@overlay/match when=1
-  memoryMB: DEFAULT_APP_MEMORY_ALLOCATION
+cfk8s_controller_namespace: #@ data.values.contour_tls_namespace
+workloads_tls_secret_name: #@ "tas-adapter-{}".format(data.values.contour_tls_secret)
 #@ end
 
 #@overlay/match by=overlay.subset({"metadata":{"name":"cf-k8s-controllers-config"}, "kind": "ConfigMap"})
