--- a/tas-adapter/overlays/tas-adapter/ingress-overlay.yaml
+++ b/tas-adapter/overlays/tas-adapter/ingress-overlay.yaml
@@ -1,4 +1,5 @@
 #@ load("@ytt:overlay", "overlay")
+#@ load("@ytt:data", "data")
 
 #@overlay/match by=overlay.subset({"metadata":{"name":"cf-k8s-api-proxy"}, "kind": "HTTPProxy"})
 ---
@@ -6,4 +7,4 @@ spec:
   virtualhost:
     tls:
       #@overlay/match missing_ok=True
-      secretName: INGRESS_TLS_SECRET_NAMESPACE/INGRESS_TLS_SECRET_NAME
+      secretName: #@ "{}/{}".format(data.values.contour_tls_namespace,data.values.contour_tls_secret)
