--- a/tas-adapter/tas-adapter-values.yaml
+++ b/tas-adapter/tas-adapter-values.yaml
@@ -1,7 +1,7 @@
 #@ load("@ytt:data", "data")
 ---
 api_ingress:
-  fqdn: #@ "api-tas-adapter.{}".format(data.values.ingress.domain)
+  fqdn: #@ "api.tas-adapter.{}".format(data.values.ingress.domain)
   tls:
     crt: "PLACEHOLDER"
     key: "PLACEHOLDER"
